Add Redis cache for mysql db and change app path